--- a/trunk/Sample/ForegroundCameraPlugin/AndroidManifest.xml
+++ b/trunk/Sample/ForegroundCameraPlugin/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
 	    Copyright 2012 Bruno Carreira - Lucas Farias - Rafael Luna - Vinícius Fonseca. 
 
 		Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,8 +12,8 @@
 		distributed under the License is distributed on an "AS IS" BASIS,
 		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 		See the License for the specific language governing permissions and
-   		limitations under the License.   			
- -->
+   		limitations under the License.   	
+-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.foregroundcameraplugin"
     android:versionCode="1"
@@ -40,28 +40,22 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
-        android:debuggable="true"
         <activity
             android:name=".App"
             android:configChanges="orientation|keyboardHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="org.apache.cordova.DroidGap"
             android:configChanges="orientation|keyboardHidden"
-            android:label="@string/app_name" >
-            <intent-filter>
-            </intent-filter>
-        </activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".CameraActivity"
             android:label="ForegroundCameraPlugin"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
