--- a/Sample/ForegroundCameraPlugin/AndroidManifest.xml
+++ b/Sample/ForegroundCameraPlugin/AndroidManifest.xml
@@ -27,8 +27,8 @@
         android:smallScreens="true" />
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
